// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShoppingListItem > displaying the list item > when the list item is editable > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_root_fccc8d"
        style="--main-color: #32b54e; --title-text-color: #fff; --border-color: #00821c; --body-background-color: #ccecd3; --body-text-color: #00410e; --hover-color: #19ac38;"
      >
        <div
          aria-controls="shoppingListItem2Details"
          aria-expanded="false"
          class="_trigger_fccc8d"
        >
          <span
            class="_descriptionContainer_fccc8d _descriptionContainerEditable_fccc8d"
          >
            <span
              class="_editIcons_fccc8d"
            >
              <button
                class="_icon_fccc8d"
                data-testid="destroyShoppingListItem2"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark _fa_fccc8d"
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 384 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
                    fill="currentColor"
                  />
                </svg>
              </button>
              <button
                class="_icon_fccc8d"
                data-testid="editShoppingListItem2"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-pen-to-square _fa_fccc8d"
                  data-icon="pen-to-square"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </span>
            <h3
              class="_description_fccc8d"
            >
              Silver Necklace
            </h3>
          </span>
          <span
            class="_quantityEditable_fccc8d"
          >
            <button
              class="_icon_fccc8d"
              data-testid="incrementShoppingListItem2"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up _fa_fccc8d"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <span
              class="_quantityContent_fccc8d"
            >
              2
            </span>
            <button
              class="_icon_fccc8d"
              data-testid="decrementShoppingListItem2"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-down _fa_fccc8d"
                data-icon="chevron-down"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="rah-static rah-static--height-zero "
          id="shoppingListItem2Details"
          style="height: 0px; overflow: hidden;"
        >
          <div
            style="display: none;"
          >
            <div
              class="_details_fccc8d"
            >
              <h4
                class="_label_fccc8d"
              >
                Unit Weight:
              </h4>
              <p
                class="_value_fccc8d"
              >
                0.3
              </p>
              <h4
                class="_label_fccc8d"
              >
                Notes:
              </h4>
              <p
                class="_value_fccc8d"
              >
                To enchant
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_root_fccc8d"
      style="--main-color: #32b54e; --title-text-color: #fff; --border-color: #00821c; --body-background-color: #ccecd3; --body-text-color: #00410e; --hover-color: #19ac38;"
    >
      <div
        aria-controls="shoppingListItem2Details"
        aria-expanded="false"
        class="_trigger_fccc8d"
      >
        <span
          class="_descriptionContainer_fccc8d _descriptionContainerEditable_fccc8d"
        >
          <span
            class="_editIcons_fccc8d"
          >
            <button
              class="_icon_fccc8d"
              data-testid="destroyShoppingListItem2"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-xmark _fa_fccc8d"
                data-icon="xmark"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 384 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <button
              class="_icon_fccc8d"
              data-testid="editShoppingListItem2"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-pen-to-square _fa_fccc8d"
                data-icon="pen-to-square"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </span>
          <h3
            class="_description_fccc8d"
          >
            Silver Necklace
          </h3>
        </span>
        <span
          class="_quantityEditable_fccc8d"
        >
          <button
            class="_icon_fccc8d"
            data-testid="incrementShoppingListItem2"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-up _fa_fccc8d"
              data-icon="chevron-up"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z"
                fill="currentColor"
              />
            </svg>
          </button>
          <span
            class="_quantityContent_fccc8d"
          >
            2
          </span>
          <button
            class="_icon_fccc8d"
            data-testid="decrementShoppingListItem2"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down _fa_fccc8d"
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                fill="currentColor"
              />
            </svg>
          </button>
        </span>
      </div>
      <div
        aria-hidden="true"
        class="rah-static rah-static--height-zero "
        id="shoppingListItem2Details"
        style="height: 0px; overflow: hidden;"
      >
        <div
          style="display: none;"
        >
          <div
            class="_details_fccc8d"
          >
            <h4
              class="_label_fccc8d"
            >
              Unit Weight:
            </h4>
            <p
              class="_value_fccc8d"
            >
              0.3
            </p>
            <h4
              class="_label_fccc8d"
            >
              Notes:
            </h4>
            <p
              class="_value_fccc8d"
            >
              To enchant
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ShoppingListItem > displaying the list item > when the list item is not editable > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_root_fccc8d"
        style="--main-color: #32b54e; --title-text-color: #fff; --border-color: #00821c; --body-background-color: #ccecd3; --body-text-color: #00410e; --hover-color: #19ac38;"
      >
        <div
          aria-controls="shoppingListItem2Details"
          aria-expanded="false"
          class="_trigger_fccc8d"
        >
          <span
            class="_descriptionContainer_fccc8d"
          >
            <h3
              class="_description_fccc8d"
            >
              Silver Necklace
            </h3>
          </span>
          <span
            class="_quantity_fccc8d"
          >
            <span
              class="_quantityContent_fccc8d"
            >
              2
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="rah-static rah-static--height-zero "
          id="shoppingListItem2Details"
          style="height: 0px; overflow: hidden;"
        >
          <div
            style="display: none;"
          >
            <div
              class="_details_fccc8d"
            >
              <h4
                class="_label_fccc8d"
              >
                Unit Weight:
              </h4>
              <p
                class="_value_fccc8d"
              >
                0.3
              </p>
              <h4
                class="_label_fccc8d"
              >
                Notes:
              </h4>
              <p
                class="_value_fccc8d"
              >
                To enchant
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_root_fccc8d"
      style="--main-color: #32b54e; --title-text-color: #fff; --border-color: #00821c; --body-background-color: #ccecd3; --body-text-color: #00410e; --hover-color: #19ac38;"
    >
      <div
        aria-controls="shoppingListItem2Details"
        aria-expanded="false"
        class="_trigger_fccc8d"
      >
        <span
          class="_descriptionContainer_fccc8d"
        >
          <h3
            class="_description_fccc8d"
          >
            Silver Necklace
          </h3>
        </span>
        <span
          class="_quantity_fccc8d"
        >
          <span
            class="_quantityContent_fccc8d"
          >
            2
          </span>
        </span>
      </div>
      <div
        aria-hidden="true"
        class="rah-static rah-static--height-zero "
        id="shoppingListItem2Details"
        style="height: 0px; overflow: hidden;"
      >
        <div
          style="display: none;"
        >
          <div
            class="_details_fccc8d"
          >
            <h4
              class="_label_fccc8d"
            >
              Unit Weight:
            </h4>
            <p
              class="_value_fccc8d"
            >
              0.3
            </p>
            <h4
              class="_label_fccc8d"
            >
              Notes:
            </h4>
            <p
              class="_value_fccc8d"
            >
              To enchant
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
